# triangle_solver

./: .dockerignore  CMakeLists.txt  README.md  buildscript  dockerfile  dockerfile__OBSOLETE  main.cpp  solve.cpp  solve.h  template.slvs
Documentation/: README.txt
FastAPI/: README  main.py  template.slvs
Stats/: information.txt  valgrind_long.txt  valgrind_short.txt
final/: main.cpp  solve.cpp  solve.h
tests/: CMakeLists.txt  main.cpp
